fixed visual bug error with todolist not showing bullet point or numbered lists

--- a/src/components/DashboardToDo.css
+++ b/src/components/DashboardToDo.css
@@ -175,11 +175,9 @@ tr.task-row.show{
 /* Reformatting lists inside table data cell to move vertically */
 td ul {
     text-align: left;
-    display: block;
 }
 
 td li {
-    display: block;
     color: black;
     pointer-events: none;
     pointer-events: none;
